fix : add overflow: hidden to project-banner class

--- a/app/[locale]/styles/partials/_projects.scss
+++ b/app/[locale]/styles/partials/_projects.scss
@@ -69,6 +69,7 @@
 
   &-banner {
     cursor: pointer;
+    overflow: hidden;
   }
 
   &-page {
